--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 NETLIFY_URL=https://jasminduong-kambaz.netlify.app
-NODE_SERVER_DOMAIN=http://localhost:4000
+NODE_SERVER_DOMAIN=jasminduong-kambaz-node-server-app.onrender.com
 SESSION_SECRET=super secret session phrase
